--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^1.11.0",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
+    "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.pro.config.babel.js --display-modules --display-error-details--watch",
+    "build": "webpack --config webpack.pro.config.babel.js --display-modules --display-error-details--watch -p",
     "start": "babel-node server.js"
   },
   "repository": {
